--- a/index.html
+++ b/index.html
@@ -565,7 +565,25 @@
                 </div>
 
                 <div class="equipment-grid" id="equipmentGrid">
-                    <!-- Equipment items will be populated here -->
+                    <!-- Sample equipment items -->
+                    <div class="equipment-card">
+                        <div class="equipment-image">🛏️</div>
+                        <div class="equipment-info">
+                            <div class="equipment-title">Hospital Bed - Electric</div>
+                            <div class="equipment-details">Adjustable height, head/foot positioning<br>Location: Within 5 miles</div>
+                            <span class="availability available">Available</span>
+                            <button class="request-btn">Request Equipment</button>
+                        </div>
+                    </div>
+                    <div class="equipment-card">
+                        <div class="equipment-image">♿</div>
+                        <div class="equipment-info">
+                            <div class="equipment-title">Power Wheelchair</div>
+                            <div class="equipment-details">Excellent condition, recently serviced<br>Location: Within 10 miles</div>
+                            <span class="availability pending">Pending</span>
+                            <button class="request-btn">Join Waitlist</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -757,26 +775,3 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="legacy" class="section" style="background: white; display: none;">
-        <div class="container">
-            <div class="tab-container">
-                <div class="hub-header">
-                    <h2>Legacy Creation Toolkit</h2>
-                    <p>Preserve memories and create meaningful connections for your loved ones</p>
-                </div>
-
-                <div class="legacy-progress">
-                    <div style="display: flex; justify-content: space-between; align-items: center;">
-                        <span><strong>Your Legacy Journey:</strong> 3 of 8 projects completed</span>
-                        <span style="color: #6b7280;">38% Complete</span>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="progress-fill" style="width: 38%;"></div>
-                    </div>
-                </div>
-
-                <div class="tab-header">
-                    <button class="tab-button active" onclick="switchLegacyTab('projects')">My Projects</button>
-                    <button class="tab-button" onclick="switchLegacyTab('
